# rnacentral-import-pipeline

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  CIRCPEDIA_IMPLEMENTATION.md  Cargo.toml  Dockerfile  LICENSE  Makefile  RELEASE.rst  analyze.nf  entrypoint.sh  export.nf  extract-ids.nf  ftp-export.nf  genes.nf  genome-mapping.nf  import-crs.nf  import-data.nf  import-metadata.nf  import-ontologies.nf  import2oracle.pl  litscan-export-articles.nf  litscan-export-metadata.nf  litscan-find-organisms.nf  litscan-load-organisms.nf  litscan-manually-annotated.nf  litscan-rescan.nf  litscan-retracted-articles.nf  litscan-search-new-ids.nf  litscan.nf  logging.cfg.txt  luigi.cfg.txt  main.nf  nextflow.config  precompute.nf  prepare-environment.nf  (+30 more)
config/: cdat.config  cluster.config  cpat.config  crs.config  databases.config  databases.json  export.config  export.nf  feedback.config  ftp-export.config  genes.config  genome-mapping.config  hive_params_template  litscan.config  main.config  metadata.config  precompute.config  qa.config  r2dt.config  rfam.config  search-export.config  secondary.config  sequence-search-export.config  stopfree.config  tcode.config  text-mining.config  traveler.config  utils.config
containers/: Makefile  Vagrantfile  build.sh
data/: cc_lines.ncr  gtrnadb-version2.json  rfam-duplicates.json  rnac7_0000.fa.tbl  test_AS_lines.ncr  test_example_entries.ncr  test_expert_db_entries.ncr  test_feature_unclosed_parenthesis.ncr  test_input1.ncr  test_input2.ncr  test_invalid_fields.ncr  test_invalid_sequences.ncr  test_long_sequence.ncr  test_rdp_product.ncr  test_refseq_product.ncr  test_rfam_duplicates.ncr  test_rfam_product.ncr  test_silva_product.ncr  test_species_patch.ncr  test_vega_product.ncr  will_cause_bioperl_error.ncr  wormbase.tsv
docs/: database.md  release.md  search-export.md
files/: all-active-urs-taxid.sql  find-active-xrefs-urs-taxids.sql  find-active-xrefs-urs.sql
java/: upi.java
jenkins/: testing.jenkinsfile
kubernetes/: pod.yaml  volume.yaml
lib/: DataSource.groovy  Input.groovy  Parse.groovy  Process.groovy  Utils.groovy
luigi/: csv_output_writer.py  download.py  ensembl.py  gtrnadb.py  json_batch_processor.py  json_parser.py  json_parser_greengenes.py  json_parser_lncipedia.py  json_parser_noncode.py  json_parser_rfam.py  mgi.py  parameters.py  pgloader.py  rfam_hits.py  rnacentral_entry.py  targets.py  utils.py
modules/: cluster
rnacentral_pipeline/: __main__.py  db.py  output_format.py  parquet_writers.py  psql.py  ribovore.py  schemas.py  utils.py  writers.py
scripts/: config_template.cfg  controller.pl  copy_input_data.sh  copy_rfam_product.sh  debug.pl  download_pdb.py  embl2csv.pl  fetch-test-data.sh  find_truncated_files.sh  hive_pipeline.sh  manually_import_rfam_ids.pl  psl2tsv.sh  rnac-hive.sh  rnac_loader.pl  rnac_loader_wrapper.sh  rnc-hive.sh  sqlplus_deploy_all_code.sh  sqlplus_download_all_code.sh  sqlplus_install_all_code.sh  update_bibliographic_data.pl
singularity/: .gitignore  build.sh
sql/: ADD_COLUMN.sql  DATABASE.sql  DISABLE_ALL_TRIGGERS.sql  DROP_ALL_SCHEMA_OBJECTS.sql  ENABLE_ALL_TRIGGERS.sql  EXPUNGE.sql  GATHER_SCHEMA_STATISTICS.sql  GATHER_TABLE_STATISTICS.sql  GET_UPI_TABLE.sql  GET_XREFS_STATISTICS.sql  MAIL.sql  REBUILD_ALL_INDEXES.sql  REBUILD_INDEXES.sql  REBUILD_INVALID_INDEXES.sql  REBUILD_TABLE_INDEXES.sql  RELEASE.sql  RNC_HEALTHCHECKS.sql  RNC_LOAD_RNA.sql  RNC_LOAD_XREF.sql  RNC_LOAD_XREF_INCREMENTAL.sql  RNC_LOGGING.sql  RNC_TEST.sql  RNC_UPDATE.sql  STATS.sql  TREMBL_UTILS.sql  UNISTATS.sql  UPI.sql  getallcode.sql  getcode.sql  install_all_code.sql  rnacentral.sql  rnc_healthchecks.sql  rnc_load_rna.sql  rnc_load_xref.sql  rnc_load_xref_incremental.sql  rnc_logging.sql  rnc_test.sql  rnc_update.sql
templates/: query-and-split.sh
tests/: helpers.py  json2fasta_test.py  utils_test.py
utils/bed-expander/: Cargo.toml
utils/bed-expander/src/: main.rs
utils/expand-urs/: Cargo.toml
utils/expand-urs/src/: main.rs
utils/expand-urs/tests/: usage_test.rs
utils/expression-atlas/: Cargo.toml
utils/expression-atlas/src/: augment.rs  configuration.rs  filtering.rs  main.rs  sdrf.rs
utils/ftp-export/: Cargo.toml
utils/ftp-export/src/: main.rs  secondary_structure.rs
utils/json2fasta/: Cargo.toml
utils/json2fasta/src/: main.rs
utils/kv/: Cargo.toml
utils/kv/src/: main.rs  store.rs
utils/kv/tests/: usage_test.rs
utils/rnc-core/: Cargo.toml
utils/rnc-core/src/: chunking.rs  database.rs  europe_pmc.rs  grouper.rs  json_sequence.rs  lib.rs  nhmmer.rs  psql.rs  urs.rs  urs_taxid.rs
utils/rnc-core/src/containers/: mod.rs  urs.rs  urs_taxid.rs
utils/rnc-core/src/publications/: external_reference.rs  mod.rs  reference.rs  reference_type.rs
utils/search-export/: Cargo.toml
utils/search-export/src/: fields.rs  main.rs  search_xml.rs  utils.rs
utils/search-export/src/genes/: gene.rs  gene_member.rs  info.rs  member.rs  mod.rs  region.rs  writers.rs
utils/search-export/src/normalize/: accession.rs  basic.rs  crs.rs  entry.rs  feedback.rs  file_joiner.rs  go_annotation.rs  interacting_protein.rs  interacting_rna.rs  mod.rs  orf.rs  precompute.rs  qa_status.rs  r2dt.rs  rfam_hit.rs  utils.rs
utils/search-export/src/normalize/ds/: accession.rs  basic.rs  crs.rs  entry.rs  feedback.rs  go_annotation.rs  interacting_protein.rs  interacting_rna.rs  mod.rs  precompute.rs  qa_status.rs  r2dt.rs  reference.rs  rfam_hit.rs  xref.rs
utils/search-export/src/sequences/: accession.rs  basic.rs  comma_space_sep.rs  crs.rs  editing_events.rs  entry.rs  feedback.rs  file_joiner.rs  go_annotation.rs  go_flow_annotations.rs  interacting_protein.rs  interacting_rna.rs  litsumm.rs  locus.rs  mod.rs  normalized.rs  orf.rs  precompute.rs  publication_counts.rs  qa_status.rs  r2dt.rs  raw.rs  rfam_hit.rs  so_tree.rs  writers.rs
weekly-update/: crontab.txt  run.sh  update.config  weekly_db_remotes
workflows/: build-precompute-accessions.nf  cpat.nf  export-coordiantes.nf  fasta-export.nf  genes.nf  id-mapping.nf  (+13 more)
(+1761 files in other folders)
