[tool.poetry]
name = "rnacentral_pipeline"
version = "0.1.0"
description = "The pipeline that imports all RNAcentral data"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.11"
PyMySQL = "^1.0.2"
attrs = "^21.4.0"
beautifulsoup4 = "^4.11.0"
biopython = "^1.81"
click = "^8.1.3"
click-aliases = "^1.0.1"
furl = "^2.1.3"
gffutils = "^0.11.1"
humanfriendly = "^10.0"
ijson = "^3.1.4"
intervaltree = "^3.1.0"
jsonschema = "^4.17"
lxml = "^4.9.1"
more-itertools = "^9.0"
obonet = "^0.3.0"
pandas = "^1.5.1"
PyPika = "^0.48.8"
pyyaml = "6.0"
requests = "^2.28.1"
retry = "^0.9.2"
scikit-learn = "^1.1.3"
semver = "^2.13.0"
slack_sdk = "^3.19.4"
sqlitedict = "^2.0.0"
TatSu = "5.8.2"
textblob = "0.15.3"
throttler = "^1.2.0"
nltk = "^3.8.1"
openpyxl = "^3.0.10"
pybedtools = {git = "https://github.com/afg1/pybedtools.git"}
psycopg2-binary = "^2.9.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
filterwarnings = "ignore::DeprecationWarning"
markers = [
    "slow: Tests that take a long time",
    "db: Test that require access to our database",
]
