[project]
name = "rnacentral_pipeline"
version = "0.1.0"
description = "The pipeline that imports all RNAcentral data"
authors = [
    {name = "Blake Sweeney", email = "bsweeney@ebi.ac.uk"}
]
requires-python = ">=3.11"
dependencies = [
    "PyMySQL>=1.0.2,<2",
    "attrs>=21.4.0,<22",
    "beautifulsoup4>=4.11.0,<5",
    "biopython>=1.81,<2",
    "click>=8.1.3,<9",
    "click-aliases>=1.0.1,<2",
    "furl>=2.1.3,<3",
    "gffutils>=0.11.1,<0.12",
    "humanfriendly>=10.0,<11",
    "ijson>=3.1.4,<4",
    "intervaltree>=3.1.0,<4",
    "jsonschema>=4.17,<5",
    "lxml>=4.9.1,<5",
    "more-itertools>=9.0,<10",
    "obonet==0.3.0",
    "pandas>=1.5.1,<2",
    "PyPika>=0.48.8,<0.49",
    "pyyaml==6.0",
    "requests>=2.28.1,<3",
    "retry>=0.9.2,<0.10",
    "scikit-learn==1.2.2",
    "semver>=2.13.0,<3",
    "slack_sdk>=3.19.4,<4",
    "sqlitedict>=2.0.0,<3",
    "TatSu==5.10.6",
    "throttler>=1.2.0,<2",
    "nltk>=3.8.1,<4",
    "openpyxl>=3.0.10,<4",
    "psycopg2-binary>=2.9.7,<3",
    "polars>=1.14.0,<2",
    "cython>=3.0.12,<4",
    "numpy<2",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2,<25",
    "isort>=5.13.2,<6",
    "pytest>=7.2.0,<8",
]

[tool.pytest.ini_options]
xfail_strict = true
filterwarnings = "ignore::DeprecationWarning"
markers = [
    "slow: Tests that take a long time",
    "db: Test that require access to our database",
]
