[package]
name = "expand-urs"
version = "0.1.0"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
rnc-core = { path = "../rnc-core" }
rnc-utils = { path = "../rnc-utils" }
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
rnc-test-utils = { path = "../rnc-test-utils" }
tempfile = "3"
test_bin = "0.3.0"

