[package]
name = "expression-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
regex = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
polars = { version = "0.21.1", features = ["lazy", "csv-file", "rows"] }
