[package]
name = "ftp-export"
version = "0.1.0"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rnc-utils = { path = "../rnc-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "^0.7.6"
structopt = "0.3"
