[package]
name = "kv"
version = "0.1.0"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.4"
fallible-iterator = "0.2.0"
log = "0.4"
rnc-utils = { path = "../rnc-utils/" }
rocksdb = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde-query = "0.1.3"
serde_json = "1.0"
simplelog = "^0.7.6"
structopt = "0.3"

[dev-dependencies]
rnc-test-utils = { path = "../rnc-test-utils" }
tempfile = "3"
test_bin = "0.3.0"
