[package]
name = "rnc-core"
version = "0.1.0"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bio = "0.32.0"
csv = "1.1.5"
fallible-iterator = "0.2.0"
fnv = "1.0.3"
itertools = "0.9.0"
lazy_static = "1.4.0"
lmdb-rkv = "0.14.0"
md-5 = "0.9.1"
quick-xml = "0.18.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.20"
