[package]
name = "search-export"
version = "0.1.0"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10.0"
log = "0.4"
phf = { version = "0.7.24", features = ["macros"] }
rnc-core = { path = "../rnc-core" }
rnc-utils = { path = "../rnc-utils/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "^0.7.6"
sorted-iter = "0.1.7"
structopt = "0.3"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0.20"

[dependencies.serde_with]
version = "1.5.1"
